2006-03-16  Xavier Claessens  <xclaesse@gmail.com>

	* Initial version
