@@ -1,3 +1,8 @@
+2006-05-13  Xavier Claessens  <xclaesse@gmail.com>
+
+	* autogen.sh: Set executable
+	* po/POTFILES.in: Update translatable files
+
 2006-03-16  Xavier Claessens  <xclaesse@gmail.com>
 
 	* Initial version
